templates/vpc.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: VPC Stack for Neptune


Parameters:
  Env:
    Description: Environment tag, e.g. prod, nonprod.
    Default: test
    Type: String
    AllowedPattern: "[a-z0-9]+"
    MaxLength: 15

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 172.30.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
      - Key: Name
        Value: !Sub "Neptune-${Env}"
      - Key: StackId
        Value: !Sub "${AWS::StackId}"
      - Key: Stack
        Value: !Sub "${AWS::Region}-${AWS::StackName}"
      - Key: Application
        Value: NeptuneCloudformation

  VPCS3Endpoint:
    Type: AWS::EC2::VPCEndpoint
    DependsOn:
    - VPC
    Properties:
      RouteTableIds:
        - !Ref PublicRouteTable
      ServiceName: !Join ['', ['com.amazonaws.', !Ref 'AWS::Region', '.s3']]
      VpcId: !Ref VPC
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal: "*"
          Action:
          - s3:*
          Resource:
          - "*"

  NeptuneSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Allow Access
      SecurityGroupIngress:
      - FromPort: '22'
        ToPort: '22'
        IpProtocol: tcp
        CidrIp: 0.0.0.0/0
        Description: ssh from anywhere
      - FromPort: '8182'
        ToPort: '8182'
        IpProtocol: tcp
        CidrIp: 0.0.0.0/0
        Description: http access
      Tags:
      - Key: Name
        Value: !Sub "Neptune-${Env}"
      - Key: StackId
        Value: !Sub "${AWS::StackId}"
      - Key: Stack
        Value: !Sub "${AWS::Region}-${AWS::StackName}"
      - Key: Application
        Value: NeptuneCloudformation

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
    DependsOn:
    - VPC

  IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: !Sub "Neptune-${Env}"
      - Key: StackId
        Value: !Sub "${AWS::StackId}"
      - Key: Stack
        Value: !Sub "${AWS::Region}-${AWS::StackName}"
      - Key: Application
        Value: NeptuneCloudformation

  IGWAtt:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref IGW
      VpcId: !Ref VPC
    DependsOn:
    - VPC
    - IGW

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW
      RouteTableId: !Ref PublicRouteTable
    DependsOn:
    - IGWAtt

  Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 172.30.1.0/24
      MapPublicIpOnLaunch: 'true'
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs: ''
  Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 172.30.2.0/24
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Select:
        - 1
        - Fn::GetAZs: ''
  Subnet3:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 172.30.3.0/24
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Select:
        - 2
        - Fn::GetAZs: ''

  SubnetRTAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
    - Subnet1
    - PublicRouteTable
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref Subnet1
  SubnetRTAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
    - Subnet2
    - PublicRouteTable
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref Subnet2
  SubnetRTAssociation3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
    - Subnet3
    - PublicRouteTable
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref Subnet3

Outputs:
  VPC:
    Description: VPC
    Value: !Ref VPC
  PublicSubnet1:
    Description: Subnet Id
    Value: !Ref Subnet1
  PublicSubnet2:
    Description: Subnet Id
    Value: !Ref Subnet2
  PublicSubnet3:
    Description: Subnet Id
    Value: !Ref Subnet3
  NeptuneSG:
    Description: Neptune Security Group
    Value: !Ref NeptuneSG
  InternetGateway:
    Description: 'Neptune InternetGateway'
    Value: !Ref IGW
